syntax = "proto3";

package notary.payment.v1alpha1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "notary/common/v1alpha1/common.proto";

service PaymentService {
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse);
  rpc UpdatePayment(UpdatePaymentRequest) returns (UpdatePaymentResponse);
  rpc DeletePayment(DeletePaymentRequest) returns (DeletePaymentResponse);
  rpc ValidateSubscriptionPromo(ValidateSubscriptionPromoRequest) returns (ValidateSubscriptionPromoResponse);
  rpc ProcessWebhook(ProcessWebhookRequest) returns (ProcessWebhookResponse);
  rpc GetPaymentHistory(GetPaymentHistoryRequest) returns (GetPaymentHistoryResponse);
  rpc GetSubscription(GetSubscriptionRequest) returns (GetSubscriptionResponse);
  rpc CreateSubscription(CreateSubscriptionRequest) returns (CreateSubscriptionResponse);
}

enum SubscriptionPlan {
  SUBSCRIPTION_PLAN_UNSPECIFIED = 0;
  SUBSCRIPTION_PLAN_BASIC = 1;
  SUBSCRIPTION_PLAN_PREMIUM = 2;
  SUBSCRIPTION_PLAN_ENTERPRISE = 3;
}

enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_COMPLETED = 2;
  PAYMENT_STATUS_FAILED = 3;
  PAYMENT_STATUS_REFUNDED = 4;
}

enum PaymentType {
  PAYMENT_TYPE_UNSPECIFIED = 0;
  PAYMENT_TYPE_SUBSCRIPTION = 1;
  PAYMENT_TYPE_ASSESSMENT = 2;
  PAYMENT_TYPE_DOCUMENT_COPY = 3;
}

enum PromoValidationStatus {
  PROMO_VALIDATION_STATUS_UNSPECIFIED = 0;
  PROMO_VALIDATION_STATUS_VALID = 1;
  PROMO_VALIDATION_STATUS_NOT_FOUND = 2;
  PROMO_VALIDATION_STATUS_EXPIRED = 3;
  PROMO_VALIDATION_STATUS_USAGE_LIMIT_REACHED = 4;
}

enum PaymentReceiptStatus {
  PAYMENT_RECEIPT_STATUS_UNSPECIFIED = 0;
  PAYMENT_RECEIPT_STATUS_PENDING = 1;
  PAYMENT_RECEIPT_STATUS_AVAILABLE = 2;
  PAYMENT_RECEIPT_STATUS_FAILED = 3;
}

message Payment {
  string id = 1;
  string user_id = 2;
  PaymentType type = 3;
  PaymentStatus status = 4;
  google.protobuf.Timestamp payment_date = 5;
  string transaction_id = 6;
  notary.common.v1alpha1.Money amount = 7;
  string description = 8;
  string payment_method = 9;
  string attachment_file_name = 10;
  string attachment_file_url = 11;
  string subscription_id = 12;
  string assessment_id = 13;
  bool has_receipt = 14;
  PaymentReceiptStatus receipt_status = 15;
}

message Subscription {
  string id = 1;
  string user_id = 2;
  SubscriptionPlan plan = 3;
  bool is_active = 4;
  google.protobuf.Timestamp start_date = 5;
  google.protobuf.Timestamp end_date = 6;
}

message CreatePaymentRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];

  string amount = 2 [(buf.validate.field).string = {
    pattern: "^[0-9]+(\\.[0-9]{1,2})?$"
    min_len: 1
  }];

  PaymentType type = 3 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];

  string target_id = 4 [(buf.validate.field).string.uuid = true];
  string promo_code = 5 [(buf.validate.field).string.max_len = 20];
  string payment_provider = 6 [(buf.validate.field).string = {
    min_len: 0
    max_len: 32
  }];
}

message PaymentWidgetInit {
  string provider = 1 [(buf.validate.field).string = {
    min_len: 1
    max_len: 32
  }];
  string confirmation_token = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 2048
  }];
  string return_url = 3 [(buf.validate.field).string.uri = true];
}

message CreatePaymentResponse {
  optional string payment_url = 1 [(buf.validate.field).string.uri = true];
  string payment_id = 2 [(buf.validate.field).string.uuid = true];
  PaymentWidgetInit widget = 3;
  notary.common.v1alpha1.Money amount = 4;
}

message ValidateSubscriptionPromoRequest {
  SubscriptionPlan plan = 1 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
  string promo_code = 2 [(buf.validate.field).string = {
    min_len: 1
    max_len: 20
  }];
}

message ValidateSubscriptionPromoResponse {
  PromoValidationStatus status = 1;
  string promo_code = 2 [(buf.validate.field).string.max_len = 20];
  notary.common.v1alpha1.Money base_amount = 3;
  notary.common.v1alpha1.Money final_amount = 4;
  notary.common.v1alpha1.Money discount_amount = 5;
  string discount_percent = 6 [(buf.validate.field).string.max_len = 16];
}

message ProcessWebhookRequest {
  string payload = 1 [(buf.validate.field).required = true];
  string signature = 2 [(buf.validate.field).required = true];
}

message ProcessWebhookResponse {
  bool success = 1;
}

message GetPaymentHistoryRequest {
  optional string user_id = 1 [(buf.validate.field).string.uuid = true];
  notary.common.v1alpha1.PaginationParams pagination = 2 [(buf.validate.field).required = true];
  PaymentHistoryFilters filters = 3;
}

message GetPaymentHistoryResponse {
  repeated Payment payments = 1;
  notary.common.v1alpha1.PaginationMeta meta = 2;
}

message PaymentHistoryFilters {
  string search_query = 1 [(buf.validate.field).string.max_len = 120];
  repeated PaymentStatus statuses = 2;
  repeated PaymentType types = 3;
  notary.common.v1alpha1.DateRange payment_date_range = 4;
}

message GetSubscriptionRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
}

message GetSubscriptionResponse {
  Subscription subscription = 1;
}

message CreateSubscriptionRequest {
  string user_id = 1 [(buf.validate.field).string.uuid = true];
  SubscriptionPlan plan = 2 [(buf.validate.field).enum = {
    defined_only: true
    not_in: [0]
  }];
  google.protobuf.Timestamp start_date = 3 [(buf.validate.field).required = true];
  google.protobuf.Timestamp end_date = 4 [(buf.validate.field).required = true];
}

message CreateSubscriptionResponse {
  Subscription subscription = 1;
}

message UpdatePaymentRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];

  optional string amount = 2 [(buf.validate.field).string = {
    pattern: "^[0-9]+(\\.[0-9]{1,2})?$"
    min_len: 1
  }];

  optional PaymentStatus status = 3 [(buf.validate.field).enum = {
    defined_only: true
  }];

  optional string payment_method = 4 [(buf.validate.field).string.max_len = 64];
  optional string transaction_id = 5 [(buf.validate.field).string.max_len = 128];
  optional string attachment_file_name = 6 [(buf.validate.field).string.max_len = 255];
  optional string attachment_file_url = 7 [(buf.validate.field).string.uri = true];
}

message UpdatePaymentResponse {
  Payment payment = 1;
}

message DeletePaymentRequest {
  string id = 1 [(buf.validate.field).string.uuid = true];
}

message DeletePaymentResponse {
  bool success = 1;
}
