@startuml
!theme plain
skinparam backgroundColor white
skinparam linetype ortho
skinparam nodesep 80
skinparam ranksep 80
skinparam classFontSize 14
skinparam classAttributeFontSize 12
skinparam classHeaderBackgroundColor #1a1a2e
skinparam classFontColor white
skinparam enumHeaderBackgroundColor #e0e0e0
skinparam enumFontColor black

class User {
  + Id: UUID <<PK>>
  + Email: varchar <<unique>>
  + PasswordHash: varchar
  + FullName: varchar
  + Role: UserRole
  + PhoneNumber: varchar?
  + IsActive: boolean
  + CreatedAt: timestamp
  + UpdatedAt: timestamp
}

class TariffPlan #FFFFCC {
  + Id: Int <<PK>>
  + Name: String
  + Price: Float
  + Description: String?
  + IsActive: Boolean = true
  + ValidFrom: DateTime
  + ValidTo: DateTime
  + CreatedAt: DateTime = now()
  + UpdatedAt: DateTime
}

class Discount #FFFFCC {
  + Id: Int <<PK>>
  + Name: String
  + Percentage: Float
  + TariffPlanId: Int? <<FK>>
  + Description: String?
  + IsActive: Boolean = true
  + ValidFrom: DateTime
  + ValidTo: DateTime
  + MinOrderAmount: Float?
  + MaxDiscountAmount: Float?
  + CreatedAt: DateTime = now()
  + UpdatedAt: DateTime
}

class Promocode #FFFFCC {
  + Id: Int <<PK>>
  + Code: String <<unique>>
  + DiscountType: enum
  + DiscountValue: Float
  + MaxUses: Int
  + UsedCount: Int = 0
  + Description: String?
  + IsActive: Boolean = true
  + ValidFrom: DateTime
  + ValidTo: DateTime
  + CreatedAt: DateTime = now()
  + UpdatedAt: DateTime
}

class Payment {
  + Id: UUID <<PK>>
  + UserId: UUID <<FK>>
  + Type: PaymentType
  + SubscriptionId: UUID? <<FK>>
  + AssessmentId: UUID? <<FK>>
  + DiscountId: Int? <<FK>>
  + PromoId: UUID? <<FK>>
  + Amount: Decimal(15,2)
  + DiscountAmount: Decimal?
  + PaymentDate: DateTime = now()
  + Status: PaymentStatus
  + PaymentMethod: String?
  + TransactionId: String? <<unique>>
  + AttachmentFileName: String?
  + AttachmentFileUrl: String?
  + ReceiptStatus: PaymentReceiptStatus?
}

class Subscription {
  + Id: UUID <<PK>>
  + UserId: UUID <<FK>>
  + TariffPlanId: Int <<FK>>
  + Plan: SubscriptionPlan
  + StartDate: Date
  + EndDate: Date
  + IsActive: Boolean
}

class Assessment {
  + Id: UUID <<PK>>
  + UserId: UUID <<FK>>
  + Status: AssessmentStatus
  + Address: String
  + Description: String?
  + EstimatedValue: String?
  + CreatedAt: timestamp
  + UpdatedAt: timestamp
}

enum PaymentType {
  Subscription
  Assessment
  DocumentCopy
}

enum PaymentStatus {
  Pending
  Completed
  Failed
  Refunded
}

enum PaymentReceiptStatus {
  Pending
  Available
  Failed
}

User "1" -down-> Payment : "1:N\nUserId (FK)"
TariffPlan "1" -right-> Discount : "1:N\nTariffPlanId (FK)\nскидка привязана к тарифу"
TariffPlan "1" -down-> Subscription : "1:N\nTariffPlanId (FK)"
Discount "1" -down-> Payment : "0..N\nDiscountId (FK)\nскидка влияет на сумму"
Payment "0..1" -left-> Subscription : "SubscriptionId (FK)"
Payment "0..1" -left-> Assessment : "AssessmentId (FK)"
Promocode "1" -down-> Payment : "0..N\nPromoId (FK)"
Payment ..> PaymentType : "<<use>>"
Payment ..> PaymentStatus : "<<use>>"
Payment ..> PaymentReceiptStatus : "<<use>>"

note right of TariffPlan: Период действия:\nValidFrom — ValidTo
note right of Promocode: Код уникален\n(unique constraint)
note bottom of Payment: Центральная сущность\nплатёжной системы
note right of Discount: Скидка привязана\nк тарифному плану\nи влияет на discountAmount\nв платеже

@enduml
